--- a/bower.json
+++ b/bower.json
@@ -2,10 +2,13 @@
   "name": "phaser-sandbox",
   "description": "A starter game using Phaser",
   "version": "0.0.0",
+  "repository": "https://github.com/shinygruv3/phaser-sandbox.git",
   "homepage": "localhost:9090",
   "license": "MIT",
-  "private": true,
+  "private": false,
   "dependencies": {
-    "phaser": "2.4.x"
+    "phaser": "~2.4.8",
+    "lodash": "~4.12.0",
+    "gulp": "~3.9.1"
   }
 }
