--- a/package.json
+++ b/package.json
@@ -3,19 +3,20 @@
   "private": true,
   "name": "phaser-sandbox",
   "description": "A first game with Phaser",
-  "repository": "https://github.com/.../phaser-sandbox",
+  "repository": "https://github.com/shinygruv3/phaser-sandbox.git",
   "license": "MIT",
   "devDependencies": {
+    "bower": "^1.3.1",
+    "gulp-jshint": "^2.0.1",
+    "gulp-webserver": "^0.9.1",
     "http-server": "^0.6.1",
     "tmp": "0.0.23",
-    "bower": "^1.3.1"
+    "tsconfig": "^2.2.0"
   },
   "scripts": {
     "postinstall": "bower install",
-
     "prestart": "npm install",
     "start": "http-server -a 0.0.0.0 -p 9090",
-
-    "pretest": "npm install",
+    "pretest": "npm install"
   }
 }
