--- a/package.json
+++ b/package.json
@@ -7,16 +7,24 @@
   "license": "MIT",
   "devDependencies": {
     "bower": "^1.3.1",
-    "gulp-jshint": "^2.0.1",
-    "gulp-webserver": "^0.9.1",
-    "http-server": "^0.6.1",
-    "tmp": "0.0.23",
-    "tsconfig": "^2.2.0"
+    "browser-sync": "^2.12.12",
+    "del": "^2.2.0",
+    "gulp": "^3.9.1",
+    "gulp-debug": "^2.1.2",
+    "gulp-inject": "^4.1.0",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-tslint": "^5.0.0",
+    "gulp-typescript": "^2.13.6",
+    "superstatic": "^4.0.2",
+    "tslint": "^3.10.2",
+    "typescript": "^1.4.1"
   },
   "scripts": {
     "postinstall": "bower install",
     "prestart": "npm install",
-    "start": "http-server -a 0.0.0.0 -p 9090",
     "pretest": "npm install"
+  },
+  "dependencies": {
+    "phaser": "^2.4.8"
   }
 }
