--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,11 @@
 {
   "compilerOptions": {
     "noImplicitAny": true,
-    "noEmitOnError": true,
-    "removeComments": false,
-    "sourceMap": true,
-    "target": "es6",
-    "outDir": "./dist/",
-    "sourceRoot": "/"
+    "target": "ES5",
+    "declaration": true,
+    "sourceMap": true
   },
-  "filesGlob": [
-    "**/*.ts"
-  ],
   "files": [
-    "./src/app.ts"
+    "src/app.ts"
   ]
 }
