--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-tslint": "^5.0.0",
     "gulp-typescript": "^2.13.6",
+    "gulp-typings": "^2.0.0",
     "superstatic": "^4.0.2",
     "tslint": "^3.10.2",
     "typescript": "^1.4.1"
